log
sá., 17 de may. de 2025  1:50:48: 
 tests:  0|5
total_score: 0/70
3f0e54c
sá., 17 de may. de 2025  1:54:24: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:17: error: unused variable 'col' [-Werror=unused-variable]
   int row = -1, col = -1;
                 ^~~
cc1.exe: all warnings being treated as errors
f1bf933
sá., 17 de may. de 2025  1:54:45: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:56:7: error: unused variable 'col' [-Werror=unused-variable]
   int col = -1;
       ^~~
cc1.exe: all warnings being treated as errors
8d13d34
sá., 17 de may. de 2025  1:55:51: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:56:7: error: variable 'col' set but not used [-Werror=unused-but-set-variable]
   int col = -1;
       ^~~
cc1.exe: all warnings being treated as errors
51da75e
sá., 17 de may. de 2025  1:58:54: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:11: error: unused variable 'k' [-Werror=unused-variable]
   int i,j,k;
           ^
sudoku.c: In function 'get_adj_nodes':
sudoku.c:64:7: error: variable 'col' set but not used [-Werror=unused-but-set-variable]
   int col = -1;
       ^~~
cc1.exe: all warnings being treated as errors
ee9a5c2
sá., 17 de may. de 2025 12:13:00: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:13: error: unused variable 'k' [-Werror=unused-variable]
   int i, j, k;
             ^
sudoku.c: In function 'get_adj_nodes':
sudoku.c:79:5: error: implicit declaration of function 'pushback' [-Werror=implicit-function-declaration]
     pushback(list, new_node);
     ^~~~~~~~
cc1.exe: all warnings being treated as errors
f1aa008
sá., 17 de may. de 2025 12:13:17: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:79:5: error: implicit declaration of function 'pushback' [-Werror=implicit-function-declaration]
     pushback(list, new_node);
     ^~~~~~~~
cc1.exe: all warnings being treated as errors
ae6e02c
sá., 17 de may. de 2025 12:14:02: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
476d096
sá., 17 de may. de 2025 12:27:13: 
 sudoku.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
666add7
sá., 17 de may. de 2025 12:29:24: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:50:9: error: unused variable 'seen' [-Werror=unused-variable]
     int seen[10] = {0};
         ^~~~
cc1.exe: all warnings being treated as errors
c4e6d5a
sá., 17 de may. de 2025 12:29:39: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:50:9: error: unused variable 'seen' [-Werror=unused-variable]
     int seen[10] = {0};
         ^~~~
cc1.exe: all warnings being treated as errors
2e39005
sá., 17 de may. de 2025 12:48:39: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
7b48f6e
sá., 17 de may. de 2025 12:56:03: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:61:11: error: unused variable 'seen' [-Werror=unused-variable]
       int seen[10] = {0};
           ^~~~
cc1.exe: all warnings being treated as errors
cbc7c9d
sá., 17 de may. de 2025 12:56:51: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:64:14: error: 'val' undeclared (first use in this function)
           if(val!=0){
              ^~~
sudoku.c:64:14: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:61:11: error: variable 'seen' set but not used [-Werror=unused-but-set-variable]
       int seen[10] = {0};
           ^~~~
cc1.exe: all warnings being treated as errors
1afa840
sá., 17 de may. de 2025 14:08:50: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:67:14: error: 'val' undeclared (first use in this function)
           if(val!=0){
              ^~~
sudoku.c:67:14: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:65:15: error: unused variable 'col' [-Werror=unused-variable]
           int col = block_j * 3 + j;
               ^~~
sudoku.c:64:15: error: unused variable 'row' [-Werror=unused-variable]
           int row = block_i * 3 + i;
               ^~~
sudoku.c:61:11: error: variable 'seen' set but not used [-Werror=unused-but-set-variable]
       int seen[10] = {0};
           ^~~~
cc1.exe: all warnings being treated as errors
585072a
sá., 17 de may. de 2025 14:27:22: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
d7a8e4e
sá., 17 de may. de 2025 14:48:24: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  6|2
total_score: 45/70
298699e
sá., 17 de may. de 2025 15:38:28: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  7|1
total_score: 55/70
e4b4b98
do., 18 de may. de 2025 18:48:48: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  7|1
total_score: 55/70
4c7cc08
do., 18 de may. de 2025 19:01:19: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:133:9: error: unused variable 'adj' [-Werror=unused-variable]
   List* adj = get_adj_nodes(current);
         ^~~
test.c:245:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
085ae0d
do., 18 de may. de 2025 19:02:08: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:134:29: error: 'current' undeclared (first use in this function)
   List* adj = get_adj_nodes(current);
                             ^~~~~~~
sudoku.c:134:29: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:134:9: error: unused variable 'adj' [-Werror=unused-variable]
   List* adj = get_adj_nodes(current);
         ^~~
cc1.exe: all warnings being treated as errors
0b1aa84
do., 18 de may. de 2025 19:03:15: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:134:29: error: 'current' undeclared (first use in this function)
   List* adj = get_adj_nodes(current);
                             ^~~~~~~
sudoku.c:134:29: note: each undeclared identifier is reported only once for each function it appears in
2a450ca
